# a653rs-router-data

./: .gitattributes  .gitignore  LICENSE-MIT  flake.nix  mypy.ini  pyproject.toml  rtt-600s.pgf
config/echo_client/: network_partition.ltcf  network_partition.yml
config/echo_client/xml/: channels.xml  module.xml  network_partition.xml  schedules.xml
config/echo_direct/: echo_server.ltcf
config/echo_direct/xml/: channels.xml  echo_client.xml  hypervisor.xml  module.xml  schedules.xml
config/echo_server/: network_partition.ltcf  network_partition.yml
config/echo_server/xml/: channels.xml  echo_server.xml  module.xml  network_partition.xml  schedules.xml
config/linux/: hv-client.yml  hv-server.yml  np-client.yml  np-server.yml
config/local_echo/: echo_client.ltcf  network_partition.ltcf  network_partition.yml
config/local_echo/xml/: channels.xml  echo_client.xml  module.xml  network_partition.xml  schedules.xml
config/throughput/direct/: sink.ltcf  source.ltcf
config/throughput/direct/xml/: channels.xml  module.xml  schedules.xml
config/throughput/local/: network_partition.ltcf  network_partition.yml  source.ltcf
config/throughput/local/xml/: channels.xml  module.xml  network_partition.xml  schedules.xml  sink.xml  source.xml
config/throughput/remote/sink/: network_partition.yml
config/throughput/remote/source/: network_partition.ltcf  network_partition.yml  source.ltcf
data/: notes.md
data/captures/2023-03-01T10:21/: digital.csv
data/captures/2023-03-01T12:46/: Session 5.sal  digital.csv
data/captures/2023-03-01T13:06/: digital.csv
data/captures/echo_client/2023-03-01T10:21/: Session 3.sal  digital.csv
data/captures/echo_client/2023-03-01T12:46/: Session 5.sal  digital.csv
data/captures/echo_client/2023-03-01T13:06/: Session 5.sal  data.csv
data/captures/echo_client/2023-03-08T11:13/: Session 0.sal  digital.csv
data/captures/echo_client/2023-03-08T13:42/: Session 1.sal  digital.csv
data/captures/echo_client/2023-03-09T09:44/: Session 5.sal
data/captures/echo_client/2023-03-09T10:00/: Session 6.sal
data/captures/echo_client/2023-03-09T14:06/: Session 9.sal
data/captures/echo_client/2023-03-14T14:08/: Session 0.sal
data/captures/echo_server/2023-03-01T13:06/: data.csv
data/captures/echo_server/2023-03-08T11:13/: Session 0.sal
data/captures/echo_server/2023-03-08T13:42/: Session 1.sal
data/captures/echo_server/2023-03-08T13:57/: Session 4.sal
data/captures/tmp/: digital.csv
master_thesis_data/: __init__.py  plot.py  simulator.py
src/master_thesis/: data.py
(+14 files in other folders)
