[project]
name = "master_thesis"
version = "0.0.1"
authors = [
  { name="dadada", email="dadada@dadada.li" },
]
description = "Master thesis data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.poetry]
name = "master-thesis-data"
version = "0.1.0"
description = ""
authors = ["dadada <dadada@dadada.li>"]
readme = "README.md"
packages = [{include = "master_thesis_data"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
seaborn = "^0.12.2"
numpy = "^1.24.2"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.7.1"
black = "^23.1.0"
mypy = "^1.1.1"

[tool.poetry.scripts]
decode-file = "master_thesis_data:decode_file"
jitter = "master_thesis_data:jitter"
mean-delays = "master_thesis_data:mean_delay"
raw-delays = "master_thesis_data:raw_delays"
plot-delays = "master_thesis_data.plot:plot_delays"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
